Refactor backend setup and enhance documentation
- Updated Python command in README for backend startup to use python3.
- Improved API documentation in app.py with detailed descriptions for endpoints and scenarios.
- Removed outdated requirements file and added comments in requirements.txt for clarity.
- Updated TypeScript version in package-lock.json for frontend.
- Enhanced App.js and Dashboard.js with comprehensive comments for better maintainability.
- Added .gitkeep file in uploads directory to ensure it is tracked by Git.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,5 @@
+# Flask Web Framework - Core backend framework for REST API
 flask>=3.0.0
+
+# Flask CORS Extension - Enables Cross-Origin Resource Sharing for frontend communication
 flask-cors>=4.0.0
